2.4.3.1: Initial Commit for the 1.18 version